# bier-rust

./: .gitignore  Cargo.toml  README.md
configs/: diamond_node_to_ipv6.ntf  example.json
examples/: receiver.rs  sender.rs
src/: api.rs  bier.rs  bift.rs  header.rs  lib.rs  main.rs
