[package]
name = "bier-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
serde_json = { version = "1.0.87" }
serde = { version = "1.0.147", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.9.0"
serde_repr = "0.1.9"
socket2 = { version = "0.4.7", features = ["unix"] }